--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "MemoFlow - Store notes and memos on the cloud",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "start": "node ./index.js"
   },
   "author": "Aashir",
   "license": "ISC",
